--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 #door {
-    width: 350px
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
+}
+
+button {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
