--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body {
+    text-align: center;
+}
 #door {
     display: block;
     margin-left: auto;
@@ -6,6 +9,16 @@
 }
 
 button {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#startButton {
+    display: none;
+}
+
+#input {
     display: block;
     margin-left: auto;
     margin-right: auto;
