--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     text-align: center;
+    font-family: "Times New Roman", Times, serif;
 }
 #door {
     display: block;
@@ -12,6 +13,16 @@ button {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    transition-duration: 0.6s;
+    padding: 8px 16px;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: "Times New Roman", Times, serif;
+}
+
+button:hover {
+    background-color: white;
+    color: black;
 }
 
 #startButton {
@@ -22,4 +33,5 @@ button {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    font-family: "Times New Roman", Times, serif;
 }
