--- a/branch2style.css
+++ b/branch2style.css
@@ -1,16 +1,24 @@
-.door {
+#door0 {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 300px;
 }
+
+.nDoor {
+    display: none;
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px; 
+}
+
 #arrow {
     width: 200px;
     margin-right: auto;
     margin-left: auto;
     display: block;
 }
-#room0 {
+.roomImg {
     display: none;
 }
 .roomImg {
