--- a/ending.css
+++ b/ending.css
@@ -15,3 +15,8 @@ body {
     font-family: "Courier New", monospace;
     }
 
+#results {
+    text-align:center;
+    font-size: 30px;
+    font-family: "Courier New", monospace;
+}
